<resources>
    <string name="app_name">Learn Easy</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="welcome">Welcome</string>
    <string name="translate">Translate</string>
    <string name="test">Test</string>
    <string name="go_back">Back</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="grammar">Grammar</string>
    <string name="select">Select</string>
    <string name="greeting">Welcome! We are thrilled that you are starting to learn English with us. Our app is designed to make learning interactive and enjoyable, helping you become better in English in short time. We are here to support you every step of the way, so you can achieve your language goals with ease!</string>
    <string name="next">Next</string>
    <string name="start_journey">Click to start your journey</string>
    <string name="enter_text_to_translate">Enter text to translate</string>
    <string name="select_your_preferred_study_option">select preferred study option</string>
    <string name="logout"><u>logout</u></string>
    <string name="test_grammar_klowledge">Test grammar knowledge</string>
    <string name="test_vocabulary_knowledge">Test vocabulary knowledge</string>
    <string name="translator">Translator</string>
    <string name="vocabulary_test">Vocabulary Test</string>
    <string name="enter_text">Enter Text</string>
    <string name="translated_text">Translated Text Here</string>
    <string name="log_in"> Log in </string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="phone">Phone</string>
    <string name="todo">TODO</string>
    <string name="grammar_test">Grammar Test</string>
    <string name="advanced">Advanced</string>
    <string name="intermediate">Intermediate</string>
    <string name="beginner">Beginner</string>
    <string name="level_select_text">Pick your english level</string>
    <string name="dont_have_an_account_signup">Dont have an Account? </string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="what_to_choose_text">We strongly recommend you to take a test to determine your english grammar and vocabulary level</string>
    <string name="Take_a_test">Test</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="total_questions">Total</string>
    <string name="current_question">Current</string>
    <string name="this_will_be_the_question">This will be the question</string>
    <string name="submit">submit</string>
    <string name="heading">Heading</string>
    <string name="text">text</string>
    <string name="start_your_grammar_course">Start your grammar course</string>
    <string name="nouns">nouns</string>
    <string name="pronouns">pronouns</string>
    <string name="adverbs">adverbs</string>
    <string name="verbs">verbs</string>
    <string name="adjectives">adjectives</string>
    <string name="prepositions">prepositions</string>
    <string name="interjections_conjunctions">interjections</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="choose_section">choose section</string>
    <string name="restart">Restart quiz</string>
    <string name="your_score">YOUR SCORE</string>
    <string name="finish">finish</string>
    <string name="result">RESULT</string>
    <string name="not_ready">under construction</string>
    <string name="verify_email">PLEASE VERIFY EMAIL ADDRESS</string>
    <string name="choose_vocabulary_field_to_study">Choose vocabulary field to study</string>
    <string name="idiomatic_expressions">Idiomatic Expressions</string>
    <string name="reported_speech">Reported Speech</string>
    <string name="passive_voice">Passive Voice</string>
    <string name="conditional_sentences">Conditional Sentences</string>
    <string name="punctuation">Punctuation</string>
    <string name="modifiers">Modifiers</string>
    <string name="subject_verb_agreement">Subject-Verb Agreement</string>
    <string name="clauses">Clauses</string>
    <string name="phrases">Phrases</string>
    <string name="sentence_structure">Sentence Structure</string>
    <string name="complex_sentences_and_advanced_sentence_structure">Complex sentences and advanced sentence structure</string>
    <string name="advanced_verb_tenses_and_forms">Advanced verb tenses and forms</string>
    <string name="advanced_noun_and_pronoun_usage">Advanced noun and pronoun usage</string>
    <string name="advanced_adjective_and_adverb_usage">Advanced adjective and adverb usage</string>
    <string name="advanced_punctuation_and_mechanics">Advanced punctuation and mechanics</string>
    <string name="advanced_style_and_usage">Advanced style and usage</string>
    <string name="advanced_syntax">Advanced Syntax</string>
    <string name="economics">Economics</string>
    <string name="int_relations">Int. Relations</string>
    <string name="it">IT</string>
    <string name="advertising">Advertising</string>
    <string name="linguistics">Linguistics</string>
    <string name="media">Media</string>
    <string name="philosophy">Philosophy</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="colors">Colors</string>
    <string name="animals">Animals</string>
    <string name="food">Food</string>
    <string name="clothing">Clothing</string>
    <string name="transport">Transport</string>
    <string name="body_parts">Body parts</string>
    <string name="jobs">Jobs</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="law">Law</string>
    <string name="education">Education</string>
    <string name="art">Art</string>
    <string name="environment">Environment</string>
    <string name="psychology">Psychology</string>

    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>German</item>
        <item>French</item>
        <item>Italian</item>
    </string-array>

</resources>