<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_preferred_study_option"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/grammar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grammar"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@drawable/button_background"
        android:paddingVertical="15dp"
        android:paddingHorizontal="25dp"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"/>
    <TextView
        android:id="@+id/grammar_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Grammar Test"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@drawable/button_background"
        android:paddingVertical="15dp"
        android:paddingHorizontal="25dp"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"/>
    <TextView
        android:id="@+id/Translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translator"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@drawable/button_background"
        android:paddingVertical="15dp"
        android:paddingHorizontal="25dp"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"/>
    <TextView
        android:id="@+id/vocabulary_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vocabulary_test"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@drawable/button_background"
        android:paddingVertical="15dp"
        android:paddingHorizontal="25dp"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text="@string/go_back"
        android:textColor="@color/black"
        android:textSize="15sp" />

</LinearLayout>