<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".GrammarIntermediateStudyGroupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/start_your_grammar_course"
        android:textAllCaps="true"
        android:textColor="@color/off_white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_18sdp">

            <TextView
                android:id="@+id/sentence_structure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/sentence_structure"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/phrases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/phrases"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/drawable_under_construction"
                tools:ignore="RtlSymmetry" />

            <TextView

                android:id="@+id/clauses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/clauses"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/drawable_under_construction"
                tools:ignore="RtlSymmetry" />

            <TextView

                android:id="@+id/subject_verb_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/subject_verb_agreement"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/drawable_under_construction"
                tools:ignore="RtlSymmetry" />

            <TextView

                android:id="@+id/modifiers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/modifiers"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/drawable_under_construction"
                tools:ignore="RtlSymmetry" />

            <TextView

                android:id="@+id/punctuation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/punctuation"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/drawable_under_construction"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/passive_voice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/passive_voice"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/drawable_under_construction"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/reported_speech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/reported_speech"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/drawable_under_construction"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/conditional_sentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/conditional_sentences"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/drawable_under_construction"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/idiomatic_expressions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_background_style"
                android:paddingHorizontal="25dp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/idiomatic_expressions"
                android:textAllCaps="true"
                android:textColor="@color/off_white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/drawable_under_construction"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_32sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_background_style"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/go_back"
        android:textColor="@color/off_white"
        android:textSize="@dimen/_13ssp" />

</LinearLayout>

