<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_dark"
    android:padding="@dimen/_15ssp"
    tools:context=".VocabularyBeginnerStudyGroupActivity">

    <TextView
        android:id="@+id/choose_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20ssp"
        android:text="@string/choose_vocabulary_field_to_study"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/off_white"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar_vocabulary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress_bar_style"
        android:outlineAmbientShadowColor="@color/off_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scroll_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_section" />

    <ScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@id/choose_section">

        <LinearLayout
            android:id="@+id/themes_selection_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_section">

            <LinearLayout
                android:layout_width="@dimen/_289sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/colors"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_style"
                    android:text="@string/colors"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/animals"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_style"
                    android:text="@string/animals"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/food"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_style"
                    android:text="@string/food"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_289sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clothing"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_style"
                    android:text="@string/clothing"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/transport"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_style"
                    android:text="@string/transport"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/body_parts"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_style"
                    android:text="@string/body_parts"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="@dimen/_289sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/jobs"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_style"
                    android:text="@string/jobs"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sports"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_style"
                    android:text="@string/sports"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/travel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_style"
                    android:text="@string/travel"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_80sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/button_background_style"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/go_back"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/off_white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>